Heart animation/check spin animation

--- a/Pages/3rd-restaurant.html
+++ b/Pages/3rd-restaurant.html
@@ -38,7 +38,7 @@
                                         <p class="p-number"><strong>25€</strong></p>
                                     </div>
                                     <div class="check">
-                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                        <i class="fas fa-check-circle"></i>
                                     </div>
                                 </div>
                                 <div class="place-menu second">
@@ -48,7 +48,7 @@
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
                                     <div class="check">
-                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                        <i class="fas fa-check-circle"></i>
                                     </div>
                                 </div>
                                 <div class="place-menu third">
@@ -58,7 +58,7 @@
                                     <p class="p-number"><strong>20€</strong></p>
                                 </div>
                                 <div class="check">
-                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 </div>
                             </div>
@@ -73,7 +73,7 @@
                                     <p class="p-number"><strong>40€</strong></p>
                                 </div>
                                 <div class="check">
-                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 </div>
                                 <div class="place-menu second">
@@ -83,7 +83,7 @@
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
                                     <div class="check">
-                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                        <i class="fas fa-check-circle"></i>
                                     </div>
                                 </div>
                                 <div class="place-menu third">
@@ -93,7 +93,7 @@
                                     <p class="p-number"><strong>44€</strong></p>
                                 </div>
                                 <div class="check">
-                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                     <p class="p-number"><strong>18€</strong></p>
                                 </div>
                                 <div class="check">
-                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 </div>
                                 <div class="place-menu second">
@@ -118,7 +118,7 @@
                                     <p class="p-number"><strong>22€</strong></p>
                                 </div>
                                 <div class="check">
-                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 </div>
                                 <div class="place-menu third">
@@ -128,7 +128,7 @@
                                     <p class="p-number"><strong>23€</strong></p>
                                 </div>
                                 <div class="check">
-                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                                 </div>
                             </div>
