--- a/Pages/index.html
+++ b/Pages/index.html
@@ -22,7 +22,9 @@
         </header>
             <section>
                 <div class="localisation">
-                    <p class="place"><i class="fas fa-map-marker-alt" aria-hidden="true"></i>Paris, Belleville</p>
+                    <form method="get" class="search">
+                        <span class="place-icon"><i class="fas fa-map-marker-alt fa-spin-hover" aria-hidden="true"></i></span><input type="text" placeholder=" Paris, Belleville" name="search">
+                    </form>
                 </div>
                 <div class="first-part">
                     <h1 class="first-title">Réservez le menu qui vous convient</h1>
