--- a/Pages/4rth-restaurant.html
+++ b/Pages/4rth-restaurant.html
@@ -25,7 +25,8 @@
                 <div class="menu-container">
                     <div class="restaurant-name">
                         <h1 class="second-title">Le délice des sens</h1>
-                        <i class="far fa-heart two"></i>
+                        <i class="far fa-heart" aria-hidden="true"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="menu">
                         <div class="entrees">
