--- a/Pages/2nd-restaurant.html
+++ b/Pages/2nd-restaurant.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="menu">
                         <div class="entrees">
-                            <p class="menu-type">Entrées</p>
+                            <p class="menu-type one">Entrées</p>
                             <div class="food-container">
                                 <div class="place-menu first">
                                     <h3 class="menu-title">Ravioles de foie gras</h3>
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                         <div class="Plats">
-                            <p class="menu-type">Plats</p>
+                            <p class="menu-type two">Plats</p>
                             <div class="food-container">
                                 <div class="place-menu first">
                                     <h3 class="menu-title">Noix de coquilles Saint-Jacques</h3>
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                         <div class="Desserts">
-                            <p class="menu-type">Desserts</p>
+                            <p class="menu-type three">Desserts</p>
                             <div class="food-container">
                                 <div class="place-menu first">
                                     <h3 class="menu-title">Macaron noisette et chocolat</h3>
