--- a/Pages/4rth-restaurant.html
+++ b/Pages/4rth-restaurant.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="menu">
                         <div class="entrees">
-                            <p class="menu-type">Entrées</p>
+                            <p class="menu-type one">Entrées</p>
                             <div class="food-container">
                                 <div class="place-menu first">
                                     <h3 class="menu-title">Tartare de thon</h3>
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="Plats">
-                            <p class="menu-type">Plats</p>
+                            <p class="menu-type two">Plats</p>
                             <div class="food-container">
                                 <div class="place-menu first">
                                     <h3 class="menu-title">Poulet rôti aux herbes de Provence</h3>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="Desserts">
-                            <p class="menu-type">Desserts</p>
+                            <p class="menu-type three">Desserts</p>
                             <div class="food-container">
                                 <div class="place-menu first">
                                     <h3 class="menu-title">Farandole de desserts</h3>
