--- a/Pages/index.html
+++ b/Pages/index.html
@@ -13,9 +13,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-          <div class="loader">
-            <span></span>
-          </div>
+    <div class="loader_bg">
+        <div class="cssload-loader">
+            <div class="cssload-inner cssload-one"></div>
+            <div class="cssload-inner cssload-two"></div>
+            <div class="cssload-inner cssload-three"></div>
+        </div>
+    </div>
         <div class="container">
         <header>
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
