Fixing loading animation

--- a/Pages/3rd-restaurant.html
+++ b/Pages/3rd-restaurant.html
@@ -24,7 +24,7 @@
             <section class="menu-part">
                 <div class="menu-container">
                     <div class="restaurant-name">
-                        <h1 class="second-title">A la française</h1>
+                        <h1 class="second-title">À la française</h1>
                         <i class="far fa-heart" aria-hidden="true"></i>
                         <i class="fas fa-heart"></i>
                     </div>
