--- a/Pages/index.html
+++ b/Pages/index.html
@@ -78,7 +78,7 @@
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
-                                    <h3 class="caption">La palette du goût</h3>
+                                    <a href="../Pages/1st-restaurant.html" id="1st-restaurant"><h3 class="caption">La palette du goût</h3></a>
                                     <p class="p-caption">Ménilmontant</p>
                                 </div>
                         </div>
@@ -90,7 +90,7 @@
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
-                                    <h3 class="caption">La note enchantée</h3>
+                                    <a href="../Pages/2nd-restaurant.html" id="2nd-restaurant"><h3 class="caption">La note enchantée</h3></a>
                                     <p class="p-caption">Charonne</p>
                                 </div>
                         </div>
@@ -101,7 +101,7 @@
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
-                                    <h3 class="caption">A la française</h3>
+                                    <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant"><h3 class="caption">A la française</h3></a>
                                     <p class="p-caption">Cité Rouge</p>
                                 </div>
                         </div>
@@ -112,7 +112,7 @@
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
-                                    <h3 class="caption">Le délice des sens</h3>
+                                    <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant"><h3 class="caption">Le délice des sens</h3></a>
                                     <p class="p-caption">Folie-Méricourt</p>
                                 </div>
                         </div>
