--- a/Pages/4rth-restaurant.html
+++ b/Pages/4rth-restaurant.html
@@ -3,9 +3,9 @@
     <head>
         <title>Le délice des sens</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="../style2.css">
-        <link rel="stylesheet" href="../style3.css">
+        <link rel="stylesheet" href="../Mobile.css">
+        <link rel="stylesheet" href="../Desktop.css">
+        <link rel="stylesheet" href="../4Restaurants.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
