Changing root for index.html

--- a/Pages/2nd-restaurant.html
+++ b/Pages/2nd-restaurant.html
@@ -15,7 +15,7 @@
     <body>
         <div class="container">
             <header>
-                <a href="../Pages/index.html#2nd-restaurant"><i class="fas fa-arrow-left"></i></a>
+                <a href="index.html#2nd-restaurant"><i class="fas fa-arrow-left"></i></a>
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
             </header>
             <div class="background-image">
