--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>OhMyFood</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../Mobile.css">
-        <link rel="stylesheet" href="../Desktop.css">
-        <link rel="stylesheet" href="../4Restaurants.css">
+        <link rel="stylesheet" href="Mobile.css">
+        <link rel="stylesheet" href="Desktop.css">
+        <link rel="stylesheet" href="4Restaurants.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
     </div>
         <div class="container">
         <header>
-                <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
+                <img class="logo" src="images/logo/ohmyfood.png" alt="Logo_ohmyfood">
         </header>
             <section>
                 <div class="localisation">
@@ -33,7 +33,7 @@
                 <div class="first-part">
                     <h1 class="first-title">Réservez le menu qui vous convient</h1>
                     <p class="description">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                    <div class="bouton1"><a href="../Pages/index.html#1st-restaurant"><p class="text1">Explorer nos restaurants</p></a></div>
+                    <div class="bouton1"><a href="index.html#1st-restaurant"><p class="text1">Explorer nos restaurants</p></a></div>
                 </div>
             </section>
         <section>
@@ -74,7 +74,7 @@
                     <div class="first-restaurant">
                         <div class="gallery-menu" id="image1">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <a href="../Pages/1st-restaurant.html" id="1st-restaurant"><img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
+                            <a href="Pages/1st-restaurant.html" id="1st-restaurant"><img class="grid-image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
@@ -87,7 +87,7 @@
                     <div class="second-restaurant">
                         <div class="gallery-menu" id="image2">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <a href="../Pages/2nd-restaurant.html" id="2nd-restaurant"><img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée">
+                            <a href="Pages/2nd-restaurant.html" id="2nd-restaurant"><img class="grid-image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée">
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="third-restaurant">
                         <div class="gallery-menu" id="image3">
-                            <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant"><img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
+                            <a href="Pages/3rd-restaurant.html" id="3rd-restaurant"><img class="grid-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="fourth-restaurant">
                         <div class="gallery-menu" id="image4">
-                            <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant"><img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
+                            <a href="Pages/4rth-restaurant.html" id="4rth-restaurant"><img class="grid-image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
                                 <div class="overlay">
                                     <i class="far fa-heart" aria-hidden="true"></i>
                                     <i class="fas fa-heart"></i>
