Adding mail adress on contact

--- a/Pages/2nd-restaurant.html
+++ b/Pages/2nd-restaurant.html
@@ -155,7 +155,7 @@
                 <div class="icon-footer"><i class="fas fa-utensils"></i><a href=""><p class="footer-caption">Proposez un restaurant</p></a></div>
                 <div class="icon-footer"><i class="fas fa-hands-helping"></i><a href=""><p class="footer-caption">Devenir partenaire</p></a></div>
                 <a href="#"><p class="footer-caption">Mentions légales</p></a>
-                <a href="#"><p class="footer-caption">Contact</p></a>
+                <a href="mailto:ohmyfood75@gmail.com"><p class="footer-caption">Contact</p></a>
             </div>
         </footer>
     </body>
