Heart animation finishing

--- a/Pages/3rd-restaurant.html
+++ b/Pages/3rd-restaurant.html
@@ -25,8 +25,9 @@
                 <div class="menu-container">
                     <div class="restaurant-name">
                         <h1 class="second-title">À la française</h1>
-                        <i class="far fa-heart" aria-hidden="true"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart heart">
+                            <i class="fas fa-heart heart-color"></i>  
+                          </i>
                     </div>
                     <div class="menu">
                         <div class="entrees">
