--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                             <div class="new"><p class="p-new">Nouveau</p></div>
                             <a href="Pages/1st-restaurant.html" id="1st-restaurant"><img class="grid-image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
                                 <div class="overlay">
-                                    <i class="far fa-heart" aria-hidden="true"></i>
-                                    <i class="fas fa-heart"></i>
+                                    <i class="far fa-heart heart">
+                                        <i class="fas fa-heart heart-color"></i>  
+                                      </i>
                                     <h3 class="caption">La palette du goût</h3>
                                     <p class="p-caption">Ménilmontant</p>
                                 </div>
@@ -89,8 +90,9 @@
                             <div class="new"><p class="p-new">Nouveau</p></div>
                             <a href="Pages/2nd-restaurant.html" id="2nd-restaurant"><img class="grid-image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée">
                                 <div class="overlay">
-                                    <i class="far fa-heart" aria-hidden="true"></i>
-                                    <i class="fas fa-heart"></i>
+                                    <i class="far fa-heart heart">
+                                        <i class="fas fa-heart heart-color"></i>  
+                                      </i>
                                     <h3 class="caption">La note enchantée</h3>
                                     <p class="p-caption">Charonne</p>
                                 </div>
@@ -101,8 +103,9 @@
                         <div class="gallery-menu" id="image3">
                             <a href="Pages/3rd-restaurant.html" id="3rd-restaurant"><img class="grid-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
                                 <div class="overlay">
-                                    <i class="far fa-heart" aria-hidden="true"></i>
-                                    <i class="fas fa-heart"></i>
+                                    <i class="far fa-heart heart">
+                                        <i class="fas fa-heart heart-color"></i>  
+                                      </i>
                                     <h3 class="caption">A la française</h3>
                                     <p class="p-caption">Cité Rouge</p>
                                 </div>
@@ -113,8 +116,9 @@
                         <div class="gallery-menu" id="image4">
                             <a href="Pages/4rth-restaurant.html" id="4rth-restaurant"><img class="grid-image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
                                 <div class="overlay">
-                                    <i class="far fa-heart" aria-hidden="true"></i>
-                                    <i class="fas fa-heart"></i>
+                                    <i class="far fa-heart heart">
+                                        <i class="fas fa-heart heart-color"></i>  
+                                      </i>
                                     <h3 class="caption">Le délice des sens</h3>
                                     <p class="p-caption">Folie-Méricourt</p>
                                 </div>
