--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
     </head>
     <body>
     <div class="loader_bg">
-        <div class="cssload-loader">
-            <div class="cssload-inner cssload-one"></div>
-            <div class="cssload-inner cssload-two"></div>
-            <div class="cssload-inner cssload-three"></div>
-        </div>
+        <div class="loading-spinner"></div>
+        <p class="page-name">ohmyfood</p>
     </div>
         <div class="container">
         <header>
@@ -77,8 +74,8 @@
                             <a href="Pages/1st-restaurant.html" id="1st-restaurant"><img class="grid-image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
                                 <div class="overlay">
                                     <i class="far fa-heart heart">
-                                        <i class="fas fa-heart heart-color"></i>  
-                                      </i>
+                                        <i class="fas fa-heart heart-color"></i> 
+                                    </i> 
                                     <h3 class="caption">La palette du goût</h3>
                                     <p class="p-caption">Ménilmontant</p>
                                 </div>
